Changes
- Update to snapshot 11
- Depend on SQLite JDBC directly instead of the mod
- Change GeckoLib maven and uncomment GeckoLib maven dependency
- Change dialogue metadata generation to be manual instead of per launch
- Revert awkward pose stack changes to render layers
- Null user data and character data checks
- Actually close all NativeImages properly
- Finally fix first load character texture generation
- More testing within the avatar renderer mixin
- Change mixin json to say Java 25 and implement refmap key